# Krona

./: CMakeLists.txt  CMakeSettings.json  README.md
KronaX/: CMakeLists.txt  KronaX.cpp  KronaX.h
KronaX/Global/: CLI.cpp  CLI.hpp  Config.cpp  Config.hpp
KronaX/Util/: StringUtil.cpp  StringUtil.hpp
